--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -6,21 +6,27 @@ on:
       - 'api-gateway/**'       # Trigger when files in api-gateway folder change
       - 'helmcharts/api-gateway/**'        
 
+env:
+  AWS_REGION : "ap-south-1"
+  
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Git clone the repository
+        uses: actions/checkout@v4
         
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: "Configure AWS Credentials" 
+        uses: aws-actions/configure-aws-credentials@v4.0.2   
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: arn:aws:iam::654654187843:role/github-oidc
+          role-session-name: gh-oidc
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Log in to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
@@ -40,16 +46,16 @@ jobs:
         run: | 
           docker push $IMAGE_TAG
 
-      - name: Update kubeconfig
-        run: |
-          aws eks update-kubeconfig --name demo-cluster --region ${{ secrets.AWS_REGION }}
+      # - name: Update kubeconfig
+      #   run: |
+      #     aws eks update-kubeconfig --name demo-cluster --region ${{ secrets.AWS_REGION }}
 
-      - name: Check Kubernetes config
-        run: |
-          cat ~/.kube/config
-          kubectl cluster-info
+      # - name: Check Kubernetes config
+      #   run: |
+      #     cat ~/.kube/config
+      #     kubectl cluster-info
 
-      - name: Deploy API Gateway with Helm
-        run: |
-          helm upgrade --install api-gateway helmcharts/api-gateway \
-            --set image.tag=api-gateway-${{ github.sha }}
+      # - name: Deploy API Gateway with Helm
+      #   run: |
+      #     helm upgrade --install api-gateway helmcharts/api-gateway \
+      #       --set image.tag=api-gateway-${{ github.sha }}
